sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: not found: value j
    while((j > 0) && (!plusPetitQue(j-1,v))) {
           ^AlgInsertionSort:8: error: not found: value j
    while((j > 0) && (!plusPetitQue(j-1,v))) {
                                    ^AlgInsertionSort:12: error: not found: value j
    setValeur(j,v)
              ^