sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var k = 0
  var v = 0
  for (i<- 1 to getNombreValeurs() -1) {
    k=i
    v=getValeur(i)
    while((j > 0) && (!plusPetitQue(j-1,v))) {
      copie(k-1,k)
      k-=1
    }
    setValeur(j,v)
  }
}
